--- a/filters-and-frequencies/nicepage.css
+++ b/filters-and-frequencies/nicepage.css
@@ -34202,14 +34202,11 @@ a.u-link.u-text-hover-grey-90:hover {
 /*end-variables sitestylecss*/
 .u-header {
   background-image: none;
-}
-
-.u-header .u-sheet-1 {
-  min-height: 80px;
+  min-height: 38px;
 }
 
 .u-header .u-menu-1 {
-  margin: 22px 0 22px auto;
+  margin: 0 auto 0 0;
 }
 
 .u-header .u-nav-1 {
@@ -34220,14 +34217,40 @@ a.u-link.u-text-hover-grey-90:hover {
 .u-header .u-nav-2 {
   font-size: 1.25rem;
 }
-@media (max-width: 1199px) {
-  .u-header .u-menu-1 {
-    width: auto;
-  }
+
+.u-header .u-menu-2 {
+  margin: -38px auto 0 calc(((100% - 1140px) / 2) + 80px);
 }
 
+.u-header .u-nav-3 {
+  font-size: 1rem;
+  letter-spacing: 0px;
+}
 
-
+.u-header .u-nav-4 {
+  font-size: 1.25rem;
+}
+@media (max-width: 1199px) {
+  .u-header .u-menu-2 {
+    margin-top: -38px;
+    margin-left: calc(((100% - 940px) / 2) + 80px);
+  }
+}
+@media (max-width: 991px) {
+  .u-header .u-menu-2 {
+    margin-left: calc(((100% - 720px) / 2) + 80px);
+  }
+}
+@media (max-width: 767px) {
+  .u-header .u-menu-2 {
+    margin-left: calc(((100% - 540px) / 2) + 80px);
+  }
+}
+@media (max-width: 575px) {
+  .u-header .u-menu-2 {
+    margin-left: calc(((100% - 340px) / 2) + 80px);
+  }
+}
 .u-footer {
   background-image: none;
 }
