--- a/filters-and-frequencies/nicepage.css
+++ b/filters-and-frequencies/nicepage.css
@@ -34202,55 +34202,49 @@ a.u-link.u-text-hover-grey-90:hover {
 /*end-variables sitestylecss*/
 .u-header {
   background-image: none;
-  min-height: 38px;
+}
+
+.u-header .u-sheet-1 {
+  min-height: 40px;
 }
 
 .u-header .u-menu-1 {
-  margin: 0 auto 0 0;
+  margin: 4px 0 0 auto;
 }
 
 .u-header .u-nav-1 {
   font-size: 1rem;
   letter-spacing: 0px;
+  font-weight: 700;
+  text-transform: uppercase;
 }
 
 .u-header .u-nav-2 {
   font-size: 1.25rem;
 }
 
-.u-header .u-menu-2 {
-  margin: -38px auto 0 calc(((100% - 1140px) / 2) + 80px);
+.u-header .u-btn-1 {
+  background-image: none;
+  border-style: none none solid;
+  align-self: center;
+  margin: -27px auto 0 0;
+  padding: 0;
 }
 
-.u-header .u-nav-3 {
-  font-size: 1rem;
-  letter-spacing: 0px;
-}
-
-.u-header .u-nav-4 {
-  font-size: 1.25rem;
+.u-header .u-btn-2 {
+  background-image: none;
+  border-style: none none solid;
+  margin: -27px auto 4px 144px;
+  padding: 0;
 }
 @media (max-width: 1199px) {
-  .u-header .u-menu-2 {
-    margin-top: -38px;
-    margin-left: calc(((100% - 940px) / 2) + 80px);
+  .u-header .u-btn-2 {
+    margin-left: 0;
   }
 }
-@media (max-width: 991px) {
-  .u-header .u-menu-2 {
-    margin-left: calc(((100% - 720px) / 2) + 80px);
-  }
-}
-@media (max-width: 767px) {
-  .u-header .u-menu-2 {
-    margin-left: calc(((100% - 540px) / 2) + 80px);
-  }
-}
-@media (max-width: 575px) {
-  .u-header .u-menu-2 {
-    margin-left: calc(((100% - 340px) / 2) + 80px);
-  }
-}
+
+
+
 .u-footer {
   background-image: none;
 }
