--- a/prokudin-gorskii/nicepage.css
+++ b/prokudin-gorskii/nicepage.css
@@ -34208,11 +34208,11 @@ a.u-link.u-text-hover-grey-90:hover {
 }
 
 .u-header .u-sheet-1 {
-  min-height: 80px;
+  min-height: 45px;
 }
 
 .u-header .u-menu-1 {
-  margin: 24px 0 22px auto;
+  margin: 7px 0 0 auto;
 }
 
 .u-header .u-nav-1 {
@@ -34225,9 +34225,31 @@ a.u-link.u-text-hover-grey-90:hover {
 .u-header .u-nav-2 {
   font-size: 1.25rem;
 }
+
+.u-header .u-btn-1 {
+  background-image: none;
+  border-style: none none solid;
+  margin: -29px auto 0 0;
+  padding: 0;
+}
+
+.u-header .u-btn-2 {
+  background-image: none;
+  border-style: none none solid;
+  margin: -27px auto 9px 144px;
+  padding: 0;
+}
 @media (max-width: 1199px) {
   .u-header .u-menu-1 {
     width: auto;
+  }
+
+  .u-header .u-btn-1 {
+    margin-top: -29px;
+  }
+
+  .u-header .u-btn-2 {
+    margin-left: 0;
   }
 }
 
