--- a/filters-and-frequencies/Filters-and-Frequencies.css
+++ b/filters-and-frequencies/Filters-and-Frequencies.css
@@ -2714,23 +2714,23 @@
 }
 
 .u-section-14 .u-shape-1 {
-  width: calc(((100% - 1140px) / 2) + 1140px);
   height: 146px;
-  margin: 0 auto 0 0;
+  margin-top: 0;
+  margin-bottom: 0;
 }
 
 .u-section-14 .u-text-1 {
-  margin: -129px auto 0 calc(((100% - 1140px) / 2));
+  margin: -126px auto 0 calc(((100% - 1140px) / 2));
 }
 
 .u-section-14 .u-text-2 {
-  margin: 20px 80px 0;
+  margin: 19px calc(((100% - 1140px) / 2) + 20px) 0 calc(((100% - 1140px) / 2));
 }
 
 .u-section-14 .u-list-1 {
   grid-template-rows: auto;
   width: 1140px;
-  margin: 54px auto 34px;
+  margin: 52px auto 34px;
 }
 
 .u-section-14 .u-repeater-1 {
@@ -2783,9 +2783,7 @@
 
 @media (max-width: 1199px) {
   .u-section-14 .u-shape-1 {
-    width: 570px;
     margin-top: -19px;
-    margin-left: calc(((100% - 1140px) / 2) + 20px);
   }
 
   .u-section-14 .u-text-1 {
@@ -2824,7 +2822,6 @@
 @media (max-width: 991px) {
   .u-section-14 .u-shape-1 {
     margin-top: 303px;
-    margin-left: calc(((100% - 1140px) / 2) + 130px);
   }
 
   .u-section-14 .u-text-1 {
@@ -2867,7 +2864,6 @@
 
   .u-section-14 .u-shape-1 {
     margin-top: 1060px;
-    margin-left: calc(((100% - 1140px) / 2) + 220px);
   }
 
   .u-section-14 .u-text-1 {
@@ -2923,9 +2919,7 @@
   }
 
   .u-section-14 .u-shape-1 {
-    width: 340px;
     margin-top: 699px;
-    margin-left: calc(((100% - 1140px) / 2) + 400px);
   }
 
   .u-section-14 .u-text-1 {
