--- a/filters-and-frequencies/nicepage.css
+++ b/filters-and-frequencies/nicepage.css
@@ -27144,6 +27144,17 @@ li.active > a.u-button-style.u-button-style.u-border-active-palette-1-light-3 {
   border-color: #834496;
   stroke: #834496;
 }
+.u-button-style.u-border-palette-0-base {
+  border-color: #555 !important;
+  color: #555 !important;
+  background-color: transparent !important;
+}
+.u-button-style.u-border-palette-0-base:hover,
+.u-button-style.u-border-palette-0-base:focus {
+  border-color: transparent !important;
+  color: #000 !important;
+  background-color: transparent !important;
+}
 .u-button-style.u-border-palette-1-base {
   border-color: #834496 !important;
   color: #834496 !important;
@@ -34226,7 +34237,6 @@ a.u-link.u-text-hover-grey-90:hover {
 .u-header .u-btn-1 {
   background-image: none;
   border-style: none none solid;
-  align-self: center;
   margin: -27px auto 0 0;
   padding: 0;
 }
@@ -34234,7 +34244,13 @@ a.u-link.u-text-hover-grey-90:hover {
 .u-header .u-btn-2 {
   background-image: none;
   border-style: none none solid;
-  margin: -27px auto 4px 144px;
+  margin: -27px auto 0px 139px;
+  padding: 0;
+}
+.u-header .u-btn-3 {
+  background-image: none;
+  border-style: none none solid;
+  margin: -27px auto 0px 300px;
   padding: 0;
 }
 @media (max-width: 1199px) {
